third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/local-datetime/no-secs.stderr
TOML parse error at line 2, column 27
  |
2 | no-secs = 1987-07-05T17:45
  |                           ^
invalid date-time
